--- a/Dockerfile.web
+++ b/Dockerfile.web
@@ -7,11 +7,12 @@ RUN npm install -g pnpm
 # Set the working directory
 WORKDIR /app
 
-# Copy package files
+# Copy root package files
 COPY package.json pnpm-lock.yaml pnpm-workspace.yaml ./
+
+# Copy package files
 COPY packages/types/package.json ./packages/types/
 COPY packages/web/package.json ./packages/web/
-COPY packages/api/package.json ./packages/api/
 
 # Install all dependencies including devDependencies for building
 RUN pnpm install --frozen-lockfile
@@ -20,7 +21,7 @@ RUN pnpm install --frozen-lockfile
 COPY . .
 
 # Build the application
-WORKDIR /app
+WORKDIR /app/packages/web
 RUN pnpm build
 
 # Use a lighter image for the final build
