--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,28 +1,28 @@
 # Use an official Node.js image as the base
 FROM node:24.0.1-alpine AS base
 
-# Install pnpm and build dependencies
+# Install pnpm
 RUN npm install -g pnpm
 
 # Set the working directory
 WORKDIR /app
 
-# Copy root package files
-COPY package.json pnpm-lock.yaml pnpm-workspace.yaml ./
-
 # Copy package files
-COPY packages/types/package.json ./packages/types/
-COPY packages/web/package.json ./packages/web/
+COPY package.json pnpm-lock.yaml ./
 
-# Install all dependencies including devDependencies for building
+# Create directory for shared types
+RUN mkdir -p node_modules/@highwater
+
+# Copy shared types
+COPY shared/ts/ ./node_modules/@highwater/
+
+# Install dependencies first for better caching
 RUN pnpm install --frozen-lockfile
 
 # Copy the rest of the application code
-COPY packages/types ./packages/types
-COPY packages/web ./packages/web
+COPY . .
 
 # Build the application
-WORKDIR /app/packages/web
 RUN pnpm build
 
 # Use a lighter image for the final build
@@ -37,13 +37,13 @@ USER node
 
 # Copy built files and node_modules
 COPY --chown=node:node --from=base /app/node_modules ./node_modules
-COPY --chown=node:node --from=base /app/packages ./packages
 COPY --chown=node:node --from=base /app/package.json .
 COPY --chown=node:node --from=base /app/pnpm-lock.yaml .
+COPY --chown=node:node --from=base /app/.next ./.next
+COPY --chown=node:node --from=base /app/public ./public
 
 # Create necessary directories with correct permissions
-RUN mkdir -p /app/.turbo/cache && \
-    mkdir -p /app/packages/web/.next && \
+RUN mkdir -p /app/.next/cache && \
     chmod -R 755 /app
 
 # Expose the port the app runs on
