--- a/backend/package.json
+++ b/backend/package.json
@@ -6,14 +6,15 @@
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
     "build": "tsc",
-    "start": "node dist/server.js"
+    "start": "node dist/server.js",
+    "postinstall": "cd ../shared/ts && pnpm install && pnpm build"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "packageManager": "pnpm@10.10.0",
   "dependencies": {
-    "@highwater/types": "workspace:*",
+    "@highwater/types": "file:../shared/ts",
     "@types/qs": "^6.9.18",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
