--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,14 +4,17 @@
   "private": true,
   "packageManager": "pnpm@10.10.0",
   "scripts": {
+    "preinstall": "cd ../../shared/ts && pnpm install",
     "dev": "next dev --turbopack",
     "build": "next build --no-lint",
     "start": "next start",
-    "lint": "next lint",
-    "postinstall": "cd ../shared/ts && pnpm install && pnpm build"
+    "lint": "next lint"
+  },
+  "optionalDependencies": {
+    "@highwater/types": "file:../shared/ts"
   },
   "dependencies": {
-    "@highwater/types": "file:../shared/ts",
+    "@highwater/types": "^0.1.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@heroicons/react": "^2.2.0",
