--- a/.dockerignore
+++ b/.dockerignore
@@ -1,23 +1,33 @@
 # Node modules
+node_modules
+!node_modules/@highwater
 **/node_modules
-!**/node_modules/@highwater
 
 # Build outputs
 **/dist
 **/build
+**/.next
+**/out
 
 # Environment files
 .env
-.env.local
-.env.*.local
+.env.*
+!.env.example
 
 # Logs
+logs
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
 # OS files
 .DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
 Thumbs.db
 
 # IDE specific files
@@ -29,19 +39,28 @@ Thumbs.db
 *.sln
 *.sw?
 
-# Docker
-.dockerignore
-
 # Test files
 **/*.test.*
 **/*.spec.*
+**/__tests__
+**/__mocks__
 
 # Coverage directory
 coverage
+.nyc_output
 
-# pnpm specific
+# Package manager specific
 .pnpm-store
 .pnpm-debug.log
+.pnpm-lock.yaml
+.npm
+yarn.lock
+package-lock.json
+.yarn-integrity
+.yarn/cache
+.yarn/unplugged
+.yarn/build-state.yml
+.yarn/install-state.gz
 
 # Turbo
 .turbo
@@ -49,7 +68,35 @@ coverage
 # Git
 .git
 .gitignore
+.gitattributes
+.github
+.gitmodules
 
-# Next.js
-.next
-out
+# Docker
+.dockerignore
+Dockerfile*
+docker-compose*
+
+# Editor files
+*.sublime-*
+*.code-workspace
+*.sublime-project
+*.sublime-workspace
+
+# System files
+Thumbs.db
+dump.rdb
+*.pid
+*.seed
+*.pid.lock
+
+# Debug logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Local development
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
