--- a/backend/api/package.json
+++ b/backend/api/package.json
@@ -6,15 +6,14 @@
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
     "build": "tsc",
-    "start": "node dist/server.js",
-    "postinstall": "cd ../shared/ts && pnpm install && pnpm build"
+    "start": "node dist/server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "packageManager": "pnpm@10.10.0",
   "dependencies": {
-    "@highwater/types": "file:../shared/ts",
+    "@highwater/types": "^0.1.0",
     "@types/qs": "^6.9.18",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
@@ -37,5 +36,8 @@
     "ts-jest": "^29.3.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3"
+  },
+  "optionalDependencies": {
+    "@highwater/types": "file:../../shared/ts"
   }
 }
