--- a/backend/api/tsconfig.json
+++ b/backend/api/tsconfig.json
@@ -4,7 +4,7 @@
       "rootDir": "src",
       "baseUrl": "src",
       "paths": {
-        "@highwater/types": ["../types/dist"]
+        "@highwater/types": ["../../shared/ts/dist"]
       },
       "strict": true,
       "esModuleInterop": true,
