--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,30 +1,44 @@
-version: '3.8'
-
 services:
   api:
     build:
-      context: ./backend
-      dockerfile: ./Dockerfile
-    image: highwater/api
+      context: .
+      dockerfile: ./backend/api/Dockerfile
+    image: highwater-api
+    container_name: highwater-api
     ports:
       - "4000:4000"
     environment:
-      - PORT=4000
       - NODE_ENV=development
-    volumes:
-      - ./backend:/app
-      - /app/node_modules
+      - PORT=4000
+    # volumes:
+    #   - ./backend:/app
+    #   - /app/node_modules
+    networks:
+      - highwater-network
+    restart: unless-stopped
 
   web:
+    pull_policy: build
     build:
-      context: ./frontend
-      dockerfile: ./Dockerfile
-    image: highwater/web
+      context: .
+      dockerfile: ./frontend/Dockerfile
+    image: highwater-web
+    container_name: highwater-web
     ports:
       - "3000:3000"
     environment:
+      - NODE_ENV=production
       - PORT=3000
-      - NODE_ENV=development
-    volumes:
-      - ./frontend:/app
-      - /app/node_modules
+      # - NEXT_PUBLIC_API_URL=http://api:4000
+    # depends_on:
+    #   - api
+    # volumes:
+    #   - ./frontend:/app/
+    #   - ./shared/ts:/app/node_modules/@highwater
+    networks:
+      - highwater-network
+    restart: unless-stopped
+
+networks:
+  highwater-network:
+    driver: bridge
