--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,17 +13,19 @@
     "@highwater/types": "file:../shared/ts"
   },
   "dependencies": {
-    "@highwater/types": "^0.1.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@heroicons/react": "^2.2.0",
+    "@highwater/types": "^0.1.0",
     "@mui/icons-material": "^7.0.2",
     "@mui/material": "^7.0.2",
+    "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
     "next": "15.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "recharts": "^2.15.3"
+    "recharts": "^2.15.3",
+    "tailwind-merge": "^3.3.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
