--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "target": "es5",
+    "sourceMap": true,
     "lib": [
       "dom",
       "dom.iterable",
@@ -27,7 +28,8 @@
     "paths": {
       "@/*": [
         "./src/*"
-      ]
+      ],
+      "@highwater/types": ["../shared/ts"]
     },
     "types": [
       "node",
